; ModuleID = '/home/carl/AnghaBench/Cello/src/extr_Num.c_Float_Assign.c'
source_filename = "/home/carl/AnghaBench/Cello/src/extr_Num.c_Float_Assign.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Float = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.Float*, %struct.Float*)* @Float_Assign to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @Float_Assign(%struct.Float* %0, %struct.Float* %1) #0 {
  %3 = alloca %struct.Float*, align 8
  %4 = alloca %struct.Float*, align 8
  %5 = alloca %struct.Float*, align 8
  store %struct.Float* %0, %struct.Float** %3, align 8
  store %struct.Float* %1, %struct.Float** %4, align 8
  %6 = load %struct.Float*, %struct.Float** %3, align 8
  store %struct.Float* %6, %struct.Float** %5, align 8
  %7 = load %struct.Float*, %struct.Float** %4, align 8
  %8 = call i32 @c_float(%struct.Float* %7)
  %9 = load %struct.Float*, %struct.Float** %5, align 8
  %10 = getelementptr inbounds %struct.Float, %struct.Float* %9, i32 0, i32 0
  store i32 %8, i32* %10, align 4
  ret void
}

declare dso_local i32 @c_float(%struct.Float*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
